--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <p>Parradaria desenfreada</p>
         </header>
 
-        <main>
+        <main> 
 
-            <div class="game-container">
+            <div id="container-game">
                 <button id="play-btn">Play</button>
-                
-                <iframe id="game-iframe" src="recursos/jogo/index.html" width="1500" height="700" frameborder="0" style="display: none;"></iframe>
+                <!-- O iframe não terá o src inicialmente -->
+                <iframe id="game-iframe" width="1500" height="700" frameborder="0" style="display: none;"></iframe>
                 <button id="change-bg-btn" style="display: none;"></button>
             </div>
 
-
+            
             <section class="intro">
                 <h2>game</h2>
                 <p>sex</p>
