--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>beat em up</title>
     <link rel="stylesheet" href="recursos/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
 
             <div id="container-game">
                 <button id="play-btn">Play</button>
-                <!-- O iframe não terá o src inicialmente -->
+                
                 <iframe id="game-iframe" width="1500" height="700" frameborder="0" style="display: none;"></iframe>
                 <button id="change-bg-btn" style="display: none;"></button>
             </div>
