--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div class="container"> 
         
         <header>
-            <h1>nome do jogo</h1>
-            <p>Parradaria desenfreada</p>
+            <h1>Parradaria Desenfreada</h1>
         </header>
 
         <main> 
@@ -29,8 +28,14 @@
 
             
             <section class="intro">
-                <h2>game</h2>
-                <p>sex</p>
+                <h2>Como jogar</h2>
+                <p>
+                ← ↑ → ↓         : Movimentação
+                z               : Ataque Principal
+                x               : Ataque Secundário
+                Barra de espaço : Pular
+                Shift           : Dash
+                </p>
             </section>
 
             <section class="characters">
