--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <section class="intro">
                 <h2>Como jogar</h2>
                 <p>
-                ← ↑ → ↓         : Movimentação
-                z               : Ataque Principal
-                x               : Ataque Secundário
-                Barra de espaço : Pular
+                ← ↑ → ↓         : Movimentação <br>
+                z               : Ataque Principal <br>
+                x               : Ataque Secundário <br>
+                Barra de espaço : Pular <br>
                 Shift           : Dash
                 </p>
             </section>
