--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
             </section>
             -->
 
-            <section class="cta">
-                <h2>Jogue Agora!</h2>
-                <button onclick="alert('Calma ai paizão, ta vendo aquele ponto brilhante?\nÉ o botão play deixado para o player, você pode apertar para jogar direto da site! aproveite!')">Baixar</button>
+            <section class="intro">
+                <h2>Entre Mundos</h2>
+                Ao cruza o portal para o novo mundo, o protagonista, logo se depara com samurais, refletindo o cenário do Japão feudal. Conforme avança, o ambiente começa a mudar, dando lugar a uma floresta espiritual densa e misteriosa. Aos poucos, os inimigos deixam de ser apenas humanos — tornam-se criaturas cada vez mais monstruosas, como se o mundo estivesse revelando sua verdadeira face sombria.
             </section>
-        </main>
+
+
 
         <footer>
             <p>&copy;Todos os direitos reservados</p>
